Add search bar and search buttons

--- a/index.html
+++ b/index.html
@@ -5,15 +5,34 @@
             .google-logo {
                 display: block;
                 margin: auto;
-                padding-top: 150px;
+                margin-top: 200px;
+            }           
+
+            .form-container {
+                margin-top: 50px;
+                text-align: center;
             }
-            p {
-                display: block;
+
+            .text-input {
+                border-color: rgb(179, 169, 169);
+                width: 50%;
+                border-radius: 15px;
+                margin-bottom: 25px;
+            }
+           
+            .search-button {
+                margin-right: 35px;
             }
             
         </style>
     </head>
     <body>
         <img class="google-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
+        <form class="form-container">
+            <input class="text-input" type="text">
+            <br>
+            <input class="search-button" type="submit" value="Google Search">
+            <input class=lucky-button" type="submit" value="I'm Feeling Lucky">
+        </form>
     </body>
 </html>
