remove underline from links

--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
                 margin-left: 20px;
                 float: right;
             }
+
+            a {
+                color: gray;
+                text-decoration: none;
+            }
             
         </style>
     </head>
