move styles to css folder

--- a/index.html
+++ b/index.html
@@ -1,97 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            .header-nav {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-            }
-
-            #about {
-                margin-right: 20px;
-                float: left;
-            }
-
-            #store {
-                float: left;
-            }
-
-            #gmail {
-                margin-left: 20px;
-                float: right;
-            }
-
-            #image {
-                float: right;
-            }
-
-            .google-logo {
-                display: block;
-                margin: auto;
-                padding-top: 200px;
-            }           
-
-            .form-container {
-                margin-top: 50px;
-                margin-bottom: 200px;
-                text-align: center;
-            }
-
-            .text-input {
-                border-color: rgb(179, 169, 169);
-                width: 50%;
-                border-radius: 15px;
-                margin-bottom: 25px;
-            }
-           
-            .search-button {
-                margin-right: 35px;
-            }
-
-            .bottom-left-nav {
-                position: absolute;
-                left: 10px;
-                bottom: 10px;
-            }
-
-            #advertising {
-                margin-right: 20px;
-                float: left;
-            }
-
-            #business {
-                margin-right: 20px;
-                float: left;
-            }
-
-            .bottom-right-nav {
-                position: absolute;
-                right: 10px;
-                bottom: 10px;
-            }
-
-            #privacy {
-                margin-left: 20px;
-                float: right;
-            }
-
-            #terms {
-                margin-left: 20px;
-                float: right;
-            }
-
-            #settings {
-                margin-left: 20px;
-                float: right;
-            }
-
-            a {
-                color: gray;
-                text-decoration: none;
-            }
-            
-        </style>
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <ul class="header-nav">
